objects/project_cloud__Project_Status__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Completed__c</fullName>
        <defaultValue>&quot;Completed&quot;</defaultValue>
        <label>Deprecated (Completed)</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__In_Progress_Late__c</fullName>
        <defaultValue>&quot;In Progress - Late&quot;</defaultValue>
        <label>Deprecated (In Progress Late)</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__In_Progress__c</fullName>
        <defaultValue>&quot;In Progress&quot;</defaultValue>
        <label>Deprecated (In Progress)</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Not_Started__c</fullName>
        <defaultValue>&quot;Not Started&quot;</defaultValue>
        <label>Deprecated (Not Started)</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>